# dyn-cloudflare-ddns

./: Dockerfile  README.md  changelog.md  crontab  docker-entrypoint.sh  pyproject.toml
.github/workflows/: github-actions.yml  publish.yml
app/: dyn-cloudflare-ddns.py
docker/: Dockerfile
dyn-cloudflare-ddns/: __main__.py
