[tool.poetry]
name = "dyn-cloudfare-ddns"
version = "0.1.0"
description = "Update Cloudflare DNS from a dynamic DNS record"
authors = ["Guillermo Castro <admin@codegeek.dev>"]

[tool.poetry.dependencies]
python = "^3.9"
cloudflare = "^2.8.15"
dnspython = "^2.1.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
